@@ -47,256 +47,6 @@ int font_type;
 
 DEFSYM(default_font, "default-font");
 
-static XFontSet x_create_font_set (char *xlfd, char ***missing,
-				   int *nmissing, char **def_string);
-
-
-DEFUN("get-font", Fget_font, Sget_font, (repv name), rep_Subr1) /*
-::doc:sawfish.wm.fonts#get-font::
-get-font NAME
-
-Return the font object representing the font named NAME (a standard X
-font specifier string).
-::end:: */
-{
-    Lisp_Font *f;
-    rep_DECLARE1(name, rep_STRINGP);
-
-    if (dpy == 0)
-	return Qnil;
-
-    f = font_list;
-    while (f != 0 && strcmp (rep_STR(name), rep_STR(f->name)) != 0)
-	f = f->next;
-    if (f == 0)
-    {
-	repv tem = global_symbol_value (Qfonts_are_fontsets);
-
-	XFontSet font_set = 0;
-	XFontStruct *font_struct = 0;
-	int ascent, descent;
-	char **missing_charset_list, *def_string;
-	int num_missing_charset_list;
-
-	if (tem != Qnil)
-	{
-	    font_set = x_create_font_set (rep_STR(name),
-					  &missing_charset_list,
-					  &num_missing_charset_list,
-					  &def_string);
-	}
-	if (font_set != 0)
-	{
-	    XFontStruct **fstrs;
-	    char **font_names;
-	    int i, num_fonts;
-	    num_fonts = XFontsOfFontSet (font_set, &fstrs, &font_names);
-	    ascent = descent = 0;
-	    for (i = 0; i < num_fonts; i++)
-	    {
-		if (fstrs[i]->ascent > ascent)
-		    ascent = fstrs[i]->ascent;
-		if (fstrs[i]->descent > descent)
-		    descent = fstrs[i]->descent;
-	    }
-	    if (num_missing_charset_list > 0)
-	    {
-		int i;
-		fprintf (stderr, "Missing charsets in FontSet creation\n");
-		for (i = 0; i < num_missing_charset_list; i++)
-		    fprintf (stderr, "\t%s\n", missing_charset_list[i]);
-		XFreeStringList (missing_charset_list);
-	    }
-	}
-	else
-	{
-	    /* can't load a FontSet, try falling back to a FontStruct */
-
-	    font_struct = XLoadQueryFont (dpy, rep_STR (name));
-	    if (font_struct != 0)
-	    {
-		ascent = font_struct->ascent;
-		descent = font_struct->descent;
-	    }
-	    else
-	    {
-		return Fsignal (Qerror,
-				rep_list_2 (rep_string_dup("no such font"),
-					    name));
-	    }
-	}
-
-	f = rep_ALLOC_CELL(sizeof(Lisp_Font));
-	rep_data_after_gc += sizeof (Lisp_Font);
-	f->car = font_type;
-	f->next = font_list;
-	font_list = f;
-	f->name = name;
-	f->plist = Qnil;
-	f->ascent = ascent;
-	f->descent = descent;
-	if (font_set != 0)
-	    f->font.set = font_set;
-	else
-	{
-	    f->font.str = font_struct;
-	    f->car |= FF_FONT_STRUCT;
-	}
-    }
-    return rep_VAL(f);
-}
-
-DEFUN("font-get", Ffont_get, Sfont_get, (repv win, repv prop), rep_Subr2) /*
-::doc:sawfish.wm.fonts#font-get::
-font-get FONT PROPERTY
-
-Return the property PROPERTY (a symbol) associated with FONT.
-::end:: */
-{
-    repv plist;
-    rep_DECLARE1(win, FONTP);
-    plist = VFONT(win)->plist;
-    while (rep_CONSP(plist) && rep_CONSP(rep_CDR(plist)))
-    {
-	if (rep_CAR(plist) == prop
-	    || (!rep_SYMBOLP(prop)
-		&& rep_value_cmp (rep_CAR(plist), prop) == 0))
-	{
-	    return rep_CAR(rep_CDR(plist));
-	}
-	plist = rep_CDR(rep_CDR(plist));
-    }
-    return Qnil;
-}
-
-DEFUN("font-put", Ffont_put, Sfont_put, (repv win, repv prop, repv val), rep_Subr3) /*
-::doc:sawfish.wm.fonts#font-put::
-font-put FONT PROPERTY VALUE
-
-Set the property PROPERTY (a symbol) associated with FONT to VALUE.
-::end:: */
-{
-    repv plist;
-    rep_DECLARE1(win, FONTP);
-    plist = VFONT(win)->plist;
-    while (rep_CONSP(plist) && rep_CONSP(rep_CDR(plist)))
-    {
-	if (rep_CAR(plist) == prop
-	    || (!rep_SYMBOLP(prop)
-		&& rep_value_cmp (rep_CAR(plist), prop) == 0))
-	{
-	    rep_CAR(rep_CDR(plist)) = val;
-	    return val;
-	}
-	plist = rep_CDR(rep_CDR(plist));
-    }
-    plist = Fcons(prop, Fcons(val, VFONT(win)->plist));
-    if (plist != rep_NULL)
-	VFONT(win)->plist = plist;
-    return val;
-}
-
-DEFUN("font-name", Ffont_name, Sfont_name, (repv font), rep_Subr1) /*
-::doc:sawfish.wm.fonts#font-name::
-font-name FONT
-
-Return the name of the font represented by the font object FONT.
-::end:: */
-{
-    rep_DECLARE1(font, FONTP);
-    return VFONT(font)->name;
-}
-
-DEFUN("fontp", Ffontp, Sfontp, (repv win), rep_Subr1) /*
-::doc:sawfish.wm.fonts#fontp::
-fontp ARG
-
-Return t if ARG is a font object.
-::end:: */
-{
-    return FONTP(win) ? Qt : Qnil;
-}
-
-int
-x_text_width (repv font, u_char *string, size_t len)
-{
-    if (FONT_STRUCT_P (font))
-	return XTextWidth (VFONT(font)->font.str, string, len);
-    else
-	return XmbTextEscapement (VFONT(font)->font.set, string, len);
-}
-
-void
-x_draw_string (Window id, repv font, GC gc,
-	       int x, int y, u_char *string, size_t len)
-{
-    if (FONT_STRUCT_P (font))
-    {
-	XSetFont (dpy, gc, VFONT(font)->font.str->fid);
-	XDrawString (dpy, id, gc, x, y, string, len);
-    }
-    else
-	XmbDrawString (dpy, id, VFONT(font)->font.set, gc, x, y, string, len);
-}
-
-DEFUN("text-width", Ftext_width, Stext_width, (repv string, repv font), rep_Subr2) /*
-::doc:sawfish.wm.fonts#text-width::
-text-width STRING [FONT]
-
-Return the number of horizontal pixels that would be required to display
-the text STRING using font object FONT (or the default-font).
-::end:: */
-{
-    rep_DECLARE1(string, rep_STRINGP);
-    if (font == Qnil)
-	font = global_symbol_value (Qdefault_font);
-    rep_DECLARE2(font, FONTP);
-    return rep_MAKE_INT (x_text_width (font, rep_STR(string),
-				       rep_STRING_LEN(string)));
-}
-
-DEFUN("font-height", Ffont_height, Sfont_height, (repv font), rep_Subr1) /*
-::doc:sawfish.wm.fonts#font-height::
-font-height [FONT]
-
-Return the bounding height of glyphs rendered using FONT (or the
-default-font).
-::end:: */
-{
-    if (font == Qnil)
-	font = global_symbol_value (Qdefault_font);
-    rep_DECLARE1(font, FONTP);
-    return rep_MAKE_INT(VFONT(font)->ascent + VFONT(font)->descent);
-}
-
-DEFUN("font-ascent", Ffont_ascent, Sfont_ascent, (repv font), rep_Subr1) /*
-::doc:sawfish.wm.fonts#font-ascent::
-font-ascent [FONT]
-
-Return the ascent of glyphs rendered using FONT (or the
-default-font).
-::end:: */
-{
-    if (font == Qnil)
-	font = global_symbol_value (Qdefault_font);
-    rep_DECLARE1(font, FONTP);
-    return rep_MAKE_INT(VFONT(font)->ascent);
-}
-
-DEFUN("font-descent", Ffont_descent, Sfont_descent, (repv font), rep_Subr1) /*
-::doc:sawfish.wm.fonts#font-descent::
-font-descent [FONT]
-
-Return the descent of glyphs rendered using FONT (or the
-default-font).
-::end:: */
-{
-    if (font == Qnil)
-	font = global_symbol_value (Qdefault_font);
-    rep_DECLARE1(font, FONTP);
-    return rep_MAKE_INT(VFONT(font)->descent);
-}
-
 
 /* XLFD pattern matching */
 
@@ -422,6 +172,297 @@ x_create_font_set (char *xlfd, char ***missing,
 }
 
 
+/* font creation */
+
+static void *
+get_font_set (const char *name, int *typep, int *ascentp, int *descentp)
+{
+    XFontSet font_set;
+    int ascent, descent;
+
+    char **missing_charset_list, *def_string;
+    int num_missing_charset_list;
+
+    font_set = x_create_font_set (rep_STR(name),
+				  &missing_charset_list,
+				  &num_missing_charset_list,
+				  &def_string);
+
+    if (font_set != 0)
+    {
+	XFontStruct **fstrs;
+	char **font_names;
+	int i, j, num_fonts;
+
+	num_fonts = XFontsOfFontSet (font_set, &fstrs, &font_names);
+	ascent = descent = 0;
+
+	for (i = 0; i < num_fonts; i++)
+	{
+	    if (fstrs[i]->ascent > ascent)
+		ascent = fstrs[i]->ascent;
+	    if (fstrs[i]->descent > descent)
+		descent = fstrs[i]->descent;
+	}
+
+	if (num_missing_charset_list > 0)
+	{
+	    fprintf (stderr, "Missing charsets in FontSet creation\n");
+	    for (j = 0; j < num_missing_charset_list; j++)
+		fprintf (stderr, "\t%s\n", missing_charset_list[j]);
+	    XFreeStringList (missing_charset_list);
+	}
+
+	*typep = FF_FONT_SET;
+	*ascentp = ascent;
+	*descentp = descent;
+    }
+
+    return font_set;
+}
+
+static void *
+get_font_struct (const char *name, int *typep, int *ascentp, int *descentp)
+{
+    XFontStruct *font_struct;
+
+    font_struct = XLoadQueryFont (dpy, rep_STR (name));
+
+    if (font_struct != 0)
+    {
+	*typep = FF_FONT_STRUCT;
+	*ascentp = font_struct->ascent;
+	*descentp = font_struct->descent;
+    }
+
+    return font_struct;
+}
+
+
+
+DEFUN("get-font", Fget_font, Sget_font, (repv name), rep_Subr1) /*
+::doc:sawfish.wm.fonts#get-font::
+get-font NAME
+
+Return the font object representing the font named NAME (a standard X
+font specifier string).
+::end:: */
+{
+    Lisp_Font *f;
+    rep_DECLARE1(name, rep_STRINGP);
+
+    if (dpy == 0)
+	return Qnil;
+
+    f = font_list;
+    while (f != 0 && strcmp (rep_STR(name), rep_STR(f->name)) != 0)
+	f = f->next;
+
+    if (f == 0)
+    {
+	repv tem = global_symbol_value (Qfonts_are_fontsets);
+
+	void *font = 0;
+	int type = -1;
+	int ascent, descent;
+
+	if (font == 0 && tem != Qnil)
+	{
+	    font = get_font_set (rep_STR(name), &type, &ascent, &descent);
+	}
+
+	if (font == 0)
+	{
+	    font = get_font_struct (rep_STR(name), &type, &ascent, &descent);
+	}
+
+	if (font == 0)
+	{
+	    return Fsignal (Qerror, rep_list_2 (rep_string_dup ("no such font"), name));
+	}
+
+	f = rep_ALLOC_CELL(sizeof(Lisp_Font));
+	rep_data_after_gc += sizeof (Lisp_Font);
+
+	f->next = font_list;
+	font_list = f;
+
+	f->car = font_type | type;
+	f->name = name;
+	f->font = font;
+	f->plist = Qnil;
+	f->ascent = ascent;
+	f->descent = descent;
+    }
+
+    return rep_VAL(f);
+}
+
+DEFUN("font-get", Ffont_get, Sfont_get, (repv win, repv prop), rep_Subr2) /*
+::doc:sawfish.wm.fonts#font-get::
+font-get FONT PROPERTY
+
+Return the property PROPERTY (a symbol) associated with FONT.
+::end:: */
+{
+    repv plist;
+    rep_DECLARE1(win, FONTP);
+    plist = VFONT(win)->plist;
+    while (rep_CONSP(plist) && rep_CONSP(rep_CDR(plist)))
+    {
+	if (rep_CAR(plist) == prop
+	    || (!rep_SYMBOLP(prop)
+		&& rep_value_cmp (rep_CAR(plist), prop) == 0))
+	{
+	    return rep_CAR(rep_CDR(plist));
+	}
+	plist = rep_CDR(rep_CDR(plist));
+    }
+    return Qnil;
+}
+
+DEFUN("font-put", Ffont_put, Sfont_put, (repv win, repv prop, repv val), rep_Subr3) /*
+::doc:sawfish.wm.fonts#font-put::
+font-put FONT PROPERTY VALUE
+
+Set the property PROPERTY (a symbol) associated with FONT to VALUE.
+::end:: */
+{
+    repv plist;
+    rep_DECLARE1(win, FONTP);
+    plist = VFONT(win)->plist;
+    while (rep_CONSP(plist) && rep_CONSP(rep_CDR(plist)))
+    {
+	if (rep_CAR(plist) == prop
+	    || (!rep_SYMBOLP(prop)
+		&& rep_value_cmp (rep_CAR(plist), prop) == 0))
+	{
+	    rep_CAR(rep_CDR(plist)) = val;
+	    return val;
+	}
+	plist = rep_CDR(rep_CDR(plist));
+    }
+    plist = Fcons(prop, Fcons(val, VFONT(win)->plist));
+    if (plist != rep_NULL)
+	VFONT(win)->plist = plist;
+    return val;
+}
+
+DEFUN("font-name", Ffont_name, Sfont_name, (repv font), rep_Subr1) /*
+::doc:sawfish.wm.fonts#font-name::
+font-name FONT
+
+Return the name of the font represented by the font object FONT.
+::end:: */
+{
+    rep_DECLARE1(font, FONTP);
+    return VFONT(font)->name;
+}
+
+DEFUN("fontp", Ffontp, Sfontp, (repv win), rep_Subr1) /*
+::doc:sawfish.wm.fonts#fontp::
+fontp ARG
+
+Return t if ARG is a font object.
+::end:: */
+{
+    return FONTP(win) ? Qt : Qnil;
+}
+
+int
+x_text_width (repv font, u_char *string, size_t len)
+{
+    switch (FONT_TYPE (font))
+    {
+    case FF_FONT_STRUCT:
+	return XTextWidth (VFONT(font)->font, string, len);
+
+    case FF_FONT_SET:
+	return XmbTextEscapement (VFONT(font)->font, string, len);
+	
+    default:
+	return 0;
+    }
+}
+
+void
+x_draw_string (Window id, repv font, GC gc,
+	       int x, int y, u_char *string, size_t len)
+{
+    switch (FONT_TYPE (font))
+    {
+    case FF_FONT_STRUCT: {
+	XFontStruct *fs = VFONT(font)->font;
+
+	XSetFont (dpy, gc, fs->fid);
+	XDrawString (dpy, id, gc, x, y, string, len);
+	break; }
+
+    case FF_FONT_SET:
+	XmbDrawString (dpy, id, VFONT(font)->font, gc, x, y, string, len);
+	break;
+    }
+}
+
+DEFUN("text-width", Ftext_width, Stext_width, (repv string, repv font), rep_Subr2) /*
+::doc:sawfish.wm.fonts#text-width::
+text-width STRING [FONT]
+
+Return the number of horizontal pixels that would be required to display
+the text STRING using font object FONT (or the default-font).
+::end:: */
+{
+    rep_DECLARE1(string, rep_STRINGP);
+    if (font == Qnil)
+	font = global_symbol_value (Qdefault_font);
+    rep_DECLARE2(font, FONTP);
+    return rep_MAKE_INT (x_text_width (font, rep_STR(string),
+				       rep_STRING_LEN(string)));
+}
+
+DEFUN("font-height", Ffont_height, Sfont_height, (repv font), rep_Subr1) /*
+::doc:sawfish.wm.fonts#font-height::
+font-height [FONT]
+
+Return the bounding height of glyphs rendered using FONT (or the
+default-font).
+::end:: */
+{
+    if (font == Qnil)
+	font = global_symbol_value (Qdefault_font);
+    rep_DECLARE1(font, FONTP);
+    return rep_MAKE_INT(VFONT(font)->ascent + VFONT(font)->descent);
+}
+
+DEFUN("font-ascent", Ffont_ascent, Sfont_ascent, (repv font), rep_Subr1) /*
+::doc:sawfish.wm.fonts#font-ascent::
+font-ascent [FONT]
+
+Return the ascent of glyphs rendered using FONT (or the
+default-font).
+::end:: */
+{
+    if (font == Qnil)
+	font = global_symbol_value (Qdefault_font);
+    rep_DECLARE1(font, FONTP);
+    return rep_MAKE_INT(VFONT(font)->ascent);
+}
+
+DEFUN("font-descent", Ffont_descent, Sfont_descent, (repv font), rep_Subr1) /*
+::doc:sawfish.wm.fonts#font-descent::
+font-descent [FONT]
+
+Return the descent of glyphs rendered using FONT (or the
+default-font).
+::end:: */
+{
+    if (font == Qnil)
+	font = global_symbol_value (Qdefault_font);
+    rep_DECLARE1(font, FONTP);
+    return rep_MAKE_INT(VFONT(font)->descent);
+}
+
+
 /* type hooks */
 
 static int
@@ -455,10 +496,16 @@ font_sweep (void)
 	Lisp_Font *next = w->next;
 	if (!rep_GC_CELL_MARKEDP(rep_VAL(w)))
 	{
-	    if (FONT_STRUCT_P (rep_VAL (w)))
-		XFreeFont (dpy, w->font.str);
-	    else
-		XFreeFontSet (dpy, w->font.set);
+	    switch (FONT_TYPE (rep_VAL (w)))
+	    {
+	    case FF_FONT_STRUCT:
+		XFreeFont (dpy, w->font);
+		break;
+
+	    case FF_FONT_SET:
+		XFreeFontSet (dpy, w->font);
+		break;
+	    }
 	    rep_FREE_CELL(w);
 	}
 	else
