@@ -1,3 +1,7 @@
+2002-09-29  John Harper  <jsh@unfactored.org>
+
+	* sawmill.h, fonts.c: refactored some of the font loading code
+
 2002-09-28  John Harper  <jsh@unfactored.org>
 
 	* events.c (configure_request): for `position' configuration,
